k8s-specifications/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - image: registry.sample.local/docker_proxy/adminer
        imagePullPolicy: Always
        name: adminer
        ports:
        - containerPort: 8080
          name: adminer
