k8s-specifications/result-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: result-debug
  labels:
    app: result
spec:
  restartPolicy: Never
  containers:
  - name: result
    image: registry.sample.local/library/examplevotingapp_result
    ports:
    - containerPort: 80
      name: result
    terminationMessagePolicy: FallbackToLogsOnError
