k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: registry.sample.local/library/examplevotingapp_result:beta6
        imagePullPolicy: Always
        name: result
        ports:
        - containerPort: 80
          name: result
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: exresult
  name: exresult
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exresult
  template:
    metadata:
      labels:
        app: exresult
    spec:
      containers:
      - image: registry.sample.local/library/examplevotingapp_result:beta6
        imagePullPolicy: Always
        name: exresult
        ports:
        - containerPort: 80
          name: exresult
