k8s-specifications/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  type: ClusterIP
  ports:
  - name: "adminer-service"
    port: 8080
    targetPort: 8080
  selector:
    app: adminer
