k8s-specifications/external-pgcluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-pgcluster
spec:
  ports:
  - port: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-pgcluster
subsets:
- addresses:
  - ip: 172.27.254.1
  ports:
  - port: 5432
